--- a/contato.html
+++ b/contato.html
@@ -239,7 +239,7 @@
     
     <!-- BEGIN PAGE SCRIPT -->
     <script src="assets/js/libs/bootstrap-validator/dist/validator.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="//maps.google.com/maps/api/js"></script>
     <script src="assets/js/libs/gmaps/gmaps.min.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/blast.js"></script>
