--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,7 @@
                     <a href="/#clients">Clientes</a>
                   </li>
                   <li class="current">
-                    <a href="#contato">Contato</a>
+                    <a href="/contato">Contato</a>
                   </li>
                 </ul>
               </nav>
@@ -111,7 +111,7 @@
                 <div class="title title-center m-t-0">
                   <h3>Nos envie uma <span class="c-primary">mensagem</span></h3>
                 </div>
-                <form role="form" id="contactForm" data-toggle="validator">
+                <form role="form" id="contactForm" data-toggle="validator" netlify name="Contato Webiste">
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="form-group required">
