--- a/contato.html
+++ b/contato.html
@@ -111,7 +111,7 @@
                 <div class="title title-center m-t-0">
                   <h3>Nos envie uma <span class="c-primary">mensagem</span></h3>
                 </div>
-                <form role="form" id="contactForm" data-toggle="validator" netlify name="Contato Webiste">
+                <form role="form" id="contactForm" data-toggle="validator" netlify name="Contato Webiste" action="https://www.igluonline.com/obrigado-pelo-contato">
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="form-group required">
