--- a/index.html
+++ b/index.html
@@ -834,7 +834,12 @@
           <div class="col-lg-3 col-md-6 hidden-sm-down">
             <div class="widget widget-flickr flickr-demo" data-count="12" data-user="36587311@N08">
               <h3 class="widget-title">Facebook</h3>
-              <div class="fb-page" data-tabs="" data-width="" data-height=""></div>
+              <div class="fb-page" data-href="https://www.facebook.com/igluonline" data-small-header="true" data-adapt-container-width="true"
+                data-hide-cover="false" data-show-facepile="true">
+                <blockquote cite="https://www.facebook.com/igluonline" class="fb-xfbml-parse-ignore">
+                  <a href="https://www.facebook.com/igluonline">Iglu</a>
+                </blockquote>
+              </div>
             </div>
           </div>
         </div>
