--- a/index.html
+++ b/index.html
@@ -329,6 +329,28 @@
                 </figure>
               </div>
             </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/drshape">
+                  <img src="assets/img/projetos/drshape.jpg" alt="Dr. shape">
+                  <figcaption>
+                    <h4>Dr. Shape</h4>
+                    <p>Suplementos alimentares</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/audiotech">
+                  <img src="assets/img/projetos/audiotech.jpg" alt="Audiotech">
+                  <figcaption>
+                    <h4>Audiotech</h4>
+                    <p>Soluções em som, luzes e estruturas</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
             <div class="item inst blog">
               <div class="item-wrapper">
                 <figure class="he-1 blue darken-3" data-link="projetos/lets">
@@ -347,6 +369,72 @@
                   <figcaption>
                     <h4>Beautyclass</h4>
                     <p>Netflix de cursos de beleza</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/ancud">
+                  <img src="assets/img/projetos/ancud.jpg" alt="Ancud IT">
+                  <figcaption>
+                    <h4>Ancud IT</h4>
+                    <p>Soluções em tecnologia</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/edap">
+                  <img src="assets/img/projetos/edap.jpg" alt="EDAP">
+                  <figcaption>
+                    <h4>EDAP</h4>
+                    <p>Escritório de advocacia</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/scenarion">
+                  <img src="assets/img/projetos/scenarion.jpg" alt="Scenarion">
+                  <figcaption>
+                    <h4>Scenarion</h4>
+                    <p>Projetos cenográficos</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/fastdezine">
+                  <img src="assets/img/projetos/fastdezine.jpg" alt="Fast Dezine">
+                  <figcaption>
+                    <h4>Fast Dezine</h4>
+                    <p>Projetos web</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/zingfit">
+                  <img src="assets/img/projetos/zingfit.jpg" alt="Zingfit">
+                  <figcaption>
+                    <h4>Zingfit</h4>
+                    <p>Boutique fitness studio</p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="item inst port">
+              <div class="item-wrapper">
+                <figure class="he-1 blue darken-3" data-link="projetos/raisabaeta">
+                  <img src="assets/img/projetos/raisabaeta.jpg" alt="Raisa Baeta">
+                  <figcaption>
+                    <h4>Raisa Baeta</h4>
+                    <p>Assessoria, Design e Eventos</p>
                   </figcaption>
                 </figure>
               </div>
