--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
+  
+		<script id="hotmart_launcher_script">
+			(function(l,a,u,n,c,h,e,r){l['HotmartLauncherObject']=c;l[c]=l[c]||function(){
+			(l[c].q=l[c].q||[]).push(arguments)},l[c].l=1*new Date();h=a.createElement(u),
+			e=a.getElementsByTagName(u)[0];h.async=1;h.src=n;e.parentNode.insertBefore(h,e)
+			})(window,document,'script','//launcher.hotmart.com/launcher.js','hot');
+
+			hot('account','9c21b4c0-a17e-3fa6-8ba8-e27d3825890b');
+		</script>
+
 </head>
 
 <body data-demo="true" class="one-page header-transparent footer-reveal theme-blue">
