--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,6 @@
   <link rel="stylesheet" href="assets/css/footers.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/nav.css" />
-  <link rel="stylesheet" href="assets/css/preloader.css" />
   <link rel="stylesheet" href="assets/css/themes.css" />
   <link rel="stylesheet" href="assets/css/ui.css" />
   <link rel="stylesheet" href="assets/css/widgets.css" />
@@ -50,6 +49,25 @@
 			hot('account','9c21b4c0-a17e-3fa6-8ba8-e27d3825890b');
 		</script>
 
+<script type="text/javascript">
+  /** This section is only needed once per page if manually copying **/
+  if (typeof MauticSDKLoaded == 'undefined') {
+    var MauticSDKLoaded = true;
+    var head = document.getElementsByTagName('head')[0];
+    var script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = 'https://mkt.igluonline.com/media/js/mautic-form.js';
+    script.onload = function () {
+      MauticSDK.onLoad();
+    };
+    head.appendChild(script);
+    var MauticDomain = 'https://mkt.igluonline.com';
+    var MauticLang = {
+      'submittingMessage': "Por favor, aguarde..."
+    }
+  }
+</script>
+
 </head>
 
 <body data-demo="true" class="one-page header-transparent footer-reveal theme-blue">
@@ -57,12 +75,6 @@
   <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
-  <!-- BEGIN PRELOADER -->
-  <div class="loader-wrapper">
-    <div class="loader-circle"></div>
-  </div>
-  <!-- END PRELOADER -->
 
   <div id="wrapper">
 
@@ -108,60 +120,74 @@
     <div id="main-content">
 
       <!-- BEGIN CONTACT SECTION -->
-      <section class="section-contact section-fullmap">
-        <div class="map" id="map-fullwidth" data-map-height="100%" data-markers='{"1":{"lat":-7.119496,"lng":-34.845012,"icon":"assets/img/map-markers/big-blue.png","title":"Here we are!"}}' data-map-style="dark" data-plugin-options='{"zoom":12,"lat":-7.119496,"lng":-34.705012,"scaleControl": false,"zoomControl":false,"panControl":false,"mapTypeControl":false}'></div>
+      <section class="section-contact " style="background-color: #333;">
+        <div class="" id="" data-map-height="100%" data-markers='{"1":{"lat":-7.119496,"lng":-34.845012,"icon":"assets/img/map-markers/big-blue.png","title":"Here we are!"}}' data-map-style="dark" data-plugin-options='{"zoom":12,"lat":-7.119496,"lng":-34.705012,"scaleControl": false,"zoomControl":false,"panControl":false,"mapTypeControl":false}'></div>
         <div class="container-fullwidth">
           <div class="row m-t-100">
             <div class="col-hg-5 col-lg-5 col-md-4 t-center m-b-30 m-t-40">
               <h1 class="header-title t-important m-b-0">Contato</h1>
-              <p class="subtitle c-light">Somos uma empresa digital e itinerante. No momento estamos em João Pessoa -BR. </p>
+              <p class="subtitle c-light">Somos uma empresa digital e itinerante. No momento estamos em Belo Horizonte - MG. </p>
             </div>
             <div class="col-hg-5 col-lg-6 col-md-8 m-b-100">
               <div class="infobox">
                 <div class="title title-center m-t-0">
                   <h3>Nos envie uma <span class="c-primary">mensagem</span></h3>
                 </div>
-                <form role="form" id="contactForm" data-toggle="validator" name="Contato Webiste" method="POST">
-                  <input type="hidden" name="_next" value="https://www.igluonline.com/obrigado-pelo-contato" />
-                  <input type="hidden" name="_subject" value="Contato Websites Igluonline" />
-                  <input type="hidden" name="_language" value="pt-BR" />
-                  <input type="text" name="_gotcha" style="display:none" />
+                <div id="mauticform_wrapper_contatoigluwebsites" class="mauticform_wrapper">
+                <form role="form" id="mauticform_contatoigluwebsites" data-toggle="validator" name="Contato Webiste" method="POST" action="https://mkt.igluonline.com/form/submit?formId=8" data-mautic-form="contatoigluwebsites" enctype="multipart/form-data">
+                  <div class="mauticform-error" id="mauticform_contatoigluwebsites_error"></div>
+                  <div class="mauticform-message" id="mauticform_contatoigluwebsites_message"></div>
+                  
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="form-group required">
-                        <label for="name">Nome</label>
-                        <div class="prepend-icon">
-                          <input type="text" id="name" name="name" class="form-control input-lg" required>
-                          <i class="nc-icon-outline users_single-03"></i>
-                        </div>
-                        <div class="help-block with-errors"></div>
+<div id="mauticform_contatoigluwebsites_nome" data-validate="nome" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
+  <label id="mauticform_label_contatoigluwebsites_nome" for="mauticform_input_contatoigluwebsites_nome" class="mauticform-label">Nome</label>
+  <div class="prepend-icon">
+    <input id="mauticform_input_contatoigluwebsites_nome" name="mauticform[nome]" value="" class="mauticform-input form-control input-lg"
+      type="text" />
+    <i class="nc-icon-outline users_single-03"></i>
+  </div>
+  <span class="mauticform-errormsg" style="display: none;">Isso é obrigatório.</span>
+</div>
                       </div>
                     </div>
                     <div class="col-sm-6">
                       <div class="form-group required">
-                        <label for="email">E-mail</label>
-                        <div class="prepend-icon">
-                          <input type="email" id="email" name="email" class="form-control input-lg" required>
-                          <i class="nc-icon-outline ui-1_email-85"></i>
-                        </div>
-                        <div class="help-block with-errors"></div>
+<div id="mauticform_contatoigluwebsites_seu_melhor_email" data-validate="seu_melhor_email" data-validation-type="email"
+  class="mauticform-row mauticform-email mauticform-field-2 mauticform-required">
+  <label id="mauticform_label_contatoigluwebsites_seu_melhor_email" for="mauticform_input_contatoigluwebsites_seu_melhor_email"
+    class="mauticform-label">Seu melhor e-mail</label>
+  <div class="prepend-icon">
+    <input id="mauticform_input_contatoigluwebsites_seu_melhor_email" name="mauticform[seu_melhor_email]" value=""
+      class="mauticform-input form-control input-lg" type="email" />
+    <i class="nc-icon-outline ui-1_email-85"></i>
+  </div>
+  <span class="mauticform-errormsg" style="display: none;">Isso é obrigatório.</span>
+</div>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="message">Mensagem</label>
-                    <textarea id="message" class="form-control" rows="10" name="message"></textarea>
-                    <div class="help-block with-errors"></div>
+                    <div id="mauticform_contatoigluwebsites_mensagem" data-validate="mensagem" data-validation-type="textarea"
+                    class="mauticform-row mauticform-text mauticform-field-3 mauticform-required">
+                    <label id="mauticform_label_contatoigluwebsites_mensagem" for="mauticform_input_contatoigluwebsites_mensagem"
+                        class="mauticform-label">Mensagem</label>
+                    <textarea id="mauticform_input_contatoigluwebsites_mensagem" name="mauticform[mensagem]" class="mauticform-textarea form-control" rows="8"></textarea>
+                    <span class="mauticform-errormsg" style="display: none;">Isso é obrigatório.</span>
+                </div>
                   </div>
                   <div class="t-center m-t-30">
-                    <button type="submit" id="form-submit" class="btn btn-primary btn-lg icon-left-effect"><i class="nc-icon-outline ui-1_email-85"></i><span>Enviar Mensagem</span></button>
-                    <div id="msgSubmit" class="hidden"></div>
+<div id="mauticform_contatoigluwebsites_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-4">
+  <button type="submit" name="mauticform[submit]" id="mauticform_input_contatoigluwebsites_submit" name="mauticform[submit]"
+value="" class="mauticform-button btn btn-primary btn-lg icon-left-effect" value="1" style="width: 250px;"><i class="nc-icon-outline ui-1_email-85"></i><span>Enviar</span></button>
+</div>
                   </div>
+<input type="hidden" name="mauticform[formId]" id="mauticform_contatoigluwebsites_id" value="8" />
+<input type="hidden" name="mauticform[return]" id="mauticform_contatoigluwebsites_return" value="" />
+<input type="hidden" name="mauticform[formName]" id="mauticform_contatoigluwebsites_name" value="contatoigluwebsites" />
                 </form>
-                <script>
-                  var contactform =  document.getElementById('contactForm');
-                  contactform.setAttribute('action', '//formspree.io/' + 'andre' + '@' + 'igluonline' + '.' + 'com');
-              </script>
+                </div>
               </div>
             </div>
           </div>
@@ -211,7 +237,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 hidden-md-down">
-            <div class="widget widget-twitter" data-count="6">
+            <div class="widget widget-" data-count="6">
               <h3 class="widget-title"></h3>
               <div class="tweets-list">
                 <ul></ul>
@@ -257,9 +283,6 @@
     
     <!-- BEGIN PAGE SCRIPT -->
     <script src="assets/js/libs/bootstrap-validator/dist/validator.min.js"></script>
-    <script src="//maps.google.com/maps/api/js"></script>
-    <script src="assets/js/libs/gmaps/gmaps.min.js"></script>
-    <script src="assets/js/map.js"></script>
     <script src="assets/js/blast.js"></script>
     <script src="assets/js/libs/velocity/velocity.min.js"></script>
     <script src="assets/js/libs/velocity/velocity.ui.min.js"></script>
